# riff_diff_protflow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  assemble_motif_library.py  assemble_motif_library_dev.py  config.py  create_fragment_library.py  fragment_rotamer_finder_bbfinder.py  identify_fragments.py  identify_fragments_multi.py  motif_library_generation.sh  pyproject.toml  rfdiffusion_protflow.py  structure_generation.py  structure_generation_dev.py  structure_generation_hbondmetric.py  structure_generation_placer.py  structure_generation_placereval.py  structure_generation_screen_partialdiff.py
database/: potentials.py
database/bb_dep_rotlibs/: asn.bbdep.rotamers.lib  asp.bbdep.rotamers.lib  cys.bbdep.rotamers.lib  glu.bbdep.rotamers.lib  his.bbdep.rotamers.lib  ile.bbdep.rotamers.lib  leu.bbdep.rotamers.lib  met.bbdep.rotamers.lib  phe.bbdep.rotamers.lib  (+6 more)
examples/: fragment_identification.sh  motif_library_generation.sh  structure_generation.sh
rosetta/: GA_dock.xml  analysis.xml  coupled_moves.xml  coupled_moves_relax_new.xml  fastrelax_constrained.xml  fastrelax_coordinate_constrained.xml  fastrelax_rmsdcheck.xml  fd_prob_refine.xml  fd_prob_refine_dev.xml  fd_refine.xml  fd_refine_v2.xml  fr_refine.xml  mpnn_fastdesign_substrate.xml  mpnn_fastdesign_substrate_v2.xml  refine_old.xml  refine_oold.xml  relax.xml  rotamer_probabilities.xml
utils/: clash_detection.py  coupled_moves.xml  default_md_20ns.mdp  fastrelax.xml  fr_constrained.xml  fragment_extraction.py  hbond_analysis.xml  identify_positions_for_rotamer_insertion.py
(+19 files in other folders)
