[project]
name = "riff-diff-protflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "protflow",
    "pydantic-settings>=2.10.1",
    "scikit-learn>=1.7.2",
]

[tool.uv.sources]
protflow = { git = "https://github.com/mabr3112/protflow" }

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff.lint]
extend-select = ["I"]
